<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="60dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:nextFocusDown="@id/passwordTextView"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="211dp"
        android:layout_height="53dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="36dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        android:nextFocusUp="@+id/editTextTextEmailAddress"
        android:nextFocusDown="@+id/buttonSignIn"
        />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/Button.Red"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="196dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:nextFocusUp="@+id/editTextTextPassword"
       />

    <Button
        android:id="@+id/buttonGotoRegisterAccount"
        style="@style/Button.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/singUpTextView"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in_test"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="12dp"
        android:text="@string/password_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/emailTextView"
        android:nextFocusDown="@id/signIn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>